fix profile and play button alignment

--- a/src/assets/styles/cmps/PlaylistDetailsControlls.css
+++ b/src/assets/styles/cmps/PlaylistDetailsControlls.css
@@ -6,6 +6,7 @@
   margin-bottom: 16px;
   position: relative;
   z-index: 1;
+  padding-left: 28px;
 }
 
 .controls-primary {
