--- a/src/assets/styles/cmps/PlaylistDetailsHeader.css
+++ b/src/assets/styles/cmps/PlaylistDetailsHeader.css
@@ -25,7 +25,6 @@
   flex-direction: column;
   justify-content: flex-end;
   padding-top: 48px;
-  padding-bottom: 8px;
   overflow: visible;
 }
 
